Fix overflow error in task list

--- a/lab2/style.css
+++ b/lab2/style.css
@@ -85,7 +85,6 @@ dialog > div:first-of-type {
 
 .round {
     border-radius: 0.5rem;
-    overflow: hidden;
 }
 
 
@@ -115,6 +114,7 @@ dialog > div:first-of-type {
     flex-direction: column;
     gap: 0.2rem;
     overflow-y: auto;
+    max-height: 60vh;
 }
 
 .list-table-container {
@@ -146,6 +146,8 @@ dialog > div:first-of-type {
     cursor: pointer;
     background-color: var(--task-background-color);
     position: relative;
+    min-height: fit-content;
+    box-sizing: border-box;
 }
 
 .task > button {
